unpackaged/main/default/objects/AcctSeed__Billing__c/AcctSeed__Billing__c.object-meta.xml
<CustomObject>
    <description>Used to document products or services related sales to a customer.</description>
    <label>Billing</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>