unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Accounting_Year__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Year__c</fullName>
    <formula>LEFT(  AcctSeed__Accounting_Period__r.Name  ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to denote the accounting year in which the period was posted.</inlineHelpText>
    <label>Accounting Year</label>
    <type>Text</type>
</CustomField>