unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Age__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Age__c</fullName>
    <formula>IF(AND(TODAY() - AcctSeed__Due_Date2__c &lt;= 0,(ROUND(AcctSeed__Balance__c, 2) &gt; 0)), "0-Current",
IF(AND(30 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), "1-30 Days",
IF(AND(60 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), "31-60 Days",
IF(AND(90 &gt;= TODAY() - AcctSeed__Due_Date2__c, TODAY() - AcctSeed__Due_Date2__c &gt; 0, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), "61-90 Days",
IF(AND(TODAY() - AcctSeed__Due_Date2__c &gt; 90, (ROUND(AcctSeed__Balance__c, 2) &gt; 0)), "Over 90 Days",
IF(AND(ROUND(AcctSeed__Balance__c, 2) = 0, TEXT(AcctSeed__Status__c) = "Posted"), "Closed",
""))))))</formula>
    <inlineHelpText>Measures the current age of the balance of the billing. Used to monitor collection of balance.</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>