unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>