unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Billings</relationshipName>
    <type>Lookup</type>
</CustomField>