unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Country__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>