unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Cash_Application_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Cash_Application_Adjustment_Amount__c</fullName>
    <inlineHelpText>The amount adjusted for payment discount or small balance write off in the process of cash receipt and application.</inlineHelpText>
    <label>Cash Application Adjustment Amount</label>
    <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Adjustment_Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>