unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Contract_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Contract_PO_Number__c</fullName>
    <formula>"Deprecated"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a deprecated PO Number. Please use the "PO Number Field"</inlineHelpText>
    <label>zDep-Contract/PO Number</label>
    <type>Text</type>
</CustomField>