unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Discount_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Due_Date__c</fullName>
    <inlineHelpText>Used in the calculation of payment terms. The number of days due from the issue date if the customer is to receive a payment discount.</inlineHelpText>
    <label>Discount Due Date</label>
    <type>Date</type>
</CustomField>