unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Percent__c</fullName>
    <inlineHelpText>The percent discount rewarded to a customer off the total of the invoice for payment within the discount days due.</inlineHelpText>
    <label>Discount %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>