unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Due_Date__c</fullName>
    <formula>IF(!ISBLANK(AcctSeed__Due_Date2__c), AcctSeed__Due_Date2__c, AcctSeed__Date__c + AcctSeed__Billing_Format__r.AcctSeed__Billing_Days_Offset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Due Date equals the Billing Date plus the Billing Days Due on the associated Account (Customer) record. Otherwise the Due Date defaults to the Billing Date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>