unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Origin_Address_Override__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Origin_Address_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overrides the Billing's default origin address.</description>
    <inlineHelpText>Overrides the Billing's default origin address.</inlineHelpText>
    <label>Origin Address Override</label>
    <referenceTo>AcctSeed__Address__c</referenceTo>
    <relationshipLabel>Origin Billings</relationshipLabel>
    <relationshipName>Origin_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>