unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Proprietary_Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Proprietary_Billing_Number__c</fullName>
    <inlineHelpText>For use when you feel salesforce's auto number will not be adequate for your organization's needs. Can be used for legacy Billings for loading history as well.</inlineHelpText>
    <label>Proprietary Billing Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>