unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Sales_Tax2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax2__c</fullName>
    <description>Total Sales Tax amount</description>
    <inlineHelpText>Total Sales Tax amount</inlineHelpText>
    <label>Sales Tax</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Line__c.AcctSeed__Tax_Line__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>