unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>