unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Shipping_Street__c</fullName>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>