unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sub_Total__c</fullName>
    <formula>AcctSeed__Total__c - AcctSeed__Sales_Tax2__c - AcctSeed__Sales_Tax3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Summary of all the Billing Lines' Sub-Total fields</inlineHelpText>
    <label>Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>