unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <inlineHelpText>Grand Total for Billing.</inlineHelpText>
    <label>Total</label>
    <summarizedField>AcctSeed__Billing_Line__c.AcctSeed__Total__c</summarizedField>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>