unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <formula>IF(AcctSeed__Total__c &lt; 0, 'Credit Memo','Invoice')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A billing can either be an Invoice or Credit memo. An invoice represents money due to your organization. A credit memo represents forgiveness of an Invoice.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>