unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AcctSeed__VAT_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__VAT_Line_Count__c</fullName>
    <inlineHelpText>Count of billing lines that are marked as Is VAT Related = true</inlineHelpText>
    <label>VAT Line Count</label>
    <summaryFilterItems>
        <field>AcctSeed__Billing_Line__c.AcctSeed__Is_VAT_Related__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AcctSeed__Billing_Line__c.AcctSeed__Billing__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>