unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Apply_Credit_Memo_to_Billing__c.field-meta.xml
<CustomField>
    <fullName>Apply_Credit_Memo_to_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apply Credit Memo to Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>