unpackaged/main/default/objects/AcctSeed__Billing__c/fields/AR_1_30__c.field-meta.xml
<CustomField>
    <fullName>AR_1_30__c</fullName>
    <formula>IF(AND(TODAY() - AcctSeed__Due_Date__c&lt;=0,(AcctSeed__Balance__c&gt;0)),0.00,
IF(AND(30&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(AcctSeed__Balance__c&gt;0)), AcctSeed__Balance__c ,
IF(AND(60&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(AcctSeed__Balance__c&gt;0)),0.00,
IF(AND(90&gt;=TODAY() - AcctSeed__Due_Date__c,TODAY() - AcctSeed__Due_Date__c&gt;0,(AcctSeed__Balance__c&gt;0)),0.00,
IF(AND(TODAY() - AcctSeed__Due_Date__c&gt;90,(AcctSeed__Balance__c&gt;0)),0.00,
0.00)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR 1-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>