unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Bill_Date_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Bill_Date_MM_DD_YYYY__c</fullName>
    <formula>AcctSeed__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Date MM/DD/YYYY</label>
    <type>Date</type>
</CustomField>