unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Bill_Remit_MICR_Text__c.field-meta.xml
<CustomField>
    <fullName>Bill_Remit_MICR_Text__c</fullName>
    <description>Used to put application number, invoice number, and invoice total amount on OCR-A portion of the remittance cover page of a billing</description>
    <formula>CCE_Application_Number__c +  Name + Total_Bill_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill_Remit_MICR_Text</label>
    <type>Text</type>
</CustomField>