unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_State_Zip__c</fullName>
    <formula>AcctSeed__Billing_City__c + ', ' + AcctSeed__Billing_State__c + ' ' + AcctSeed__Billing_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City State Zip</label>
    <type>Text</type>
</CustomField>