unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <formula>AcctSeed__Billing_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>