unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Delivery_Method__c</fullName>
    <formula>Text( AcctSeed__Customer__r.Billing_Delivery_Method__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The method in which invoices should be delivered to the Client. This field can only be edited in the Account object.</inlineHelpText>
    <label>Billing Delivery Method</label>
    <type>Text</type>
</CustomField>