unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_End_Date__c</fullName>
    <formula>IF( Partial_Recurring_Bill__c =False,  AcctSeed__Accounting_Period__r.AcctSeed__End_Date__c ,  Partial_Recurring_Billing_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>