unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <formula>TEXT( Billing_Start_Date__c )+" - "+TEXT( Billing_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Period</label>
    <type>Text</type>
</CustomField>