unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <formula>IF( Partial_Recurring_Bill__c = False,  AcctSeed__Accounting_Period__r.AcctSeed__Start_Date__c ,  Partial_Recurring_Billing_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>