unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Managed Service Asset Assignment</fullName>
            </value>
            <value>
                <fullName>Advanced Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>