unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Adjustment_Amount__c</fullName>
    <description>adjustment_amount field from Cat-5 Orders table</description>
    <label>Cat-5 Adjustment Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>