unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Discrepancy__c</fullName>
    <formula>Cat_5_Order_Total__c - AcctSeed__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cat-5 Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>