unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Email__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Email__c</fullName>
    <description>email field from Cat-5 Orders table</description>
    <label>Cat-5 Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>