unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Order_Total__c</fullName>
    <description>order_total_amount field from Cat-5 Orders table</description>
    <label>Cat-5 Order Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>