unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Paid_Date__c</fullName>
    <description>paid_date from Cat-5 Orders table</description>
    <label>Cat-5 Paid Date</label>
    <type>Date</type>
</CustomField>