unpackaged/main/default/objects/AcctSeed__Billing__c/fields/Cat_5_Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cat_5_Sales_Tax_Amount__c</fullName>
    <description>sales_tax_amount field from Cat-5 Orders table</description>
    <label>Cat-5 Sales Tax Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>